--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,20 +1,24 @@
 <div class="home-grid">
 	<div class="card tracking">
 		<h2>TRACKING</h2>
-        <p>Ya tienes tu numero de seguimiento?</p>
-        <p>Ingresalo aqui para ver como va!</p>
-		<button (click)="goTo('/tracking')">Go</button>
+		<p>¿Ya tienes tu número de seguimiento?</p>
+		<p>Ingresa aquí para ver cómo va</p>
+
+		<div class="tracking-box">
+			<input
+				type="text"
+				placeholder="Ej: TRK-983472"
+				#trackingInput
+			/>
+			<button (click)="goToTracking(trackingInput.value)">
+				Buscar
+			</button>
+		</div>
 	</div>
 
 	<div class="card shipper">
-		<h2>SHIPPER</h2>
-        <p>Revisa tus envios</p>
-		<button (click)="goTo('/shipper')">Go</button>
-	</div>
-
-	<div class="card user">
-		<h2>USER</h2>
-        <p>Revisa tus pedidos</p>
-		<button (click)="goTo('/user')">Go</button>
+		<h2>Envios</h2>
+		<p>Revisa tus envíos</p>
+		<button (click)="goTo('/shipper')">Entrar</button>
 	</div>
 </div>
