--- a/src/app/components/shipments/shipments-list/shipments-list.html
+++ b/src/app/components/shipments/shipments-list/shipments-list.html
@@ -72,7 +72,7 @@
             </td>
             <td>
               <div class="btn-group btn-group-sm">
-                <button class="btn btn-outline-info" [routerLink]="['/shipments', shipment.shipmentId]">
+                <button class="btn btn-outline-info" [routerLink]="['/shipments/detail', shipment.shipmentId]">
                   <i class="fas fa-eye"></i> Ver
                 </button>
                 <button *ngIf="shipment.shipmentStatusDescription !== 'Entregado'" 
